[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spc-monitor"
version = "0.1.0"
description = "SPC library in Python with Phase I/II workflows."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jorge Luis Merlo Mejía"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
  "mypy>=1.6",
]
notebooks = [
  "jupyter>=1.0",
  "ipykernel>=6.0",
]
perf = [
  "joblib>=1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["spc_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"